Sacamos bootstrap a los forms y los configuramos con CSS

--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -134,7 +134,7 @@ main aside h3 > a {
 .content-videos div{
     display: inline-block;
     margin: 1px 5px;
-    width: 236; height: 145;
+    width: 236px; height: 145px;
 }
 
 /*PIE*/
